# PointPillars-ROS

./: .gitignore  CMakeLists.txt  README.md  object_detector_component.hpp  package.xml
include/point_pillars_ros/: point_pillars.h  point_pillars_ros_component.hpp
src/: main.cpp  point_pillars.cpp  point_pillars_ros_component.cpp  pp_preprocess.cu
