<?xml version="1.0"?>
<package format="2">
  <name>point_pillars_ros</name>
  <version>1.12.0</version>
  <description>point_pillars_ros</description>
  <maintainer email="shimada.toyozo.lf@tut.jp">Toyozo Shimada</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>yaml-cpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>tensorrt_common</depend>
  <depend>jsk_recognition_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
